out/old/manifests/portal/Service.portal-expose.yaml
metadata:
  name: portal-expose
  namespace: portal
  annotations: {}
spec:
  ports:
  - protocol: TCP
    port: 12380
    targetPort: 80
  selector:
    app: portal
  clusterIP: <IP_100>
  type: ClusterIP
  externalIPs:
  - <CLEANUP_IP_5>
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
