out/old/manifests/portal/Ingress.portal-ingress.yaml
metadata:
  name: portal-ingress
  namespace: portal
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"portal:portal-expose","ingressName":"portal:portal-ingress","hostname":"portal.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: portal.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal-expose
            port:
              number: 12380
apiVersion: <DOMAIN_775>/v1
kind: Ingress
